--- a/FreeElectro.lpi
+++ b/FreeElectro.lpi
@@ -38,7 +38,7 @@
       <Unit1>
         <Filename Value="pakWin\modWinMain.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="Form1"/>
+        <ComponentName Value="winMain"/>
         <ResourceBaseClass Value="Form"/>
       </Unit1>
     </Units>
