--- a/FreeElectro.lpi
+++ b/FreeElectro.lpi
@@ -39,6 +39,7 @@
         <Filename Value="pakWin\modWinMain.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="winMain"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit1>
     </Units>
@@ -54,6 +55,11 @@
       <OtherUnitFiles Value="pakWin"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
+    <CodeGeneration>
+      <TargetProcessor Value="pentium4"/>
+      <TargetCPU Value="i386"/>
+      <TargetOS Value="win32"/>
+    </CodeGeneration>
     <Linking>
       <Options>
         <Win32>
