--- a/FreeElectro.lpi
+++ b/FreeElectro.lpi
@@ -30,7 +30,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="2">
+    <Units Count="3">
       <Unit0>
         <Filename Value="FreeElectro.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -42,6 +42,12 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit1>
+      <Unit2>
+        <Filename Value="pakWin\modWinSize.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="winSize"/>
+        <ResourceBaseClass Value="Form"/>
+      </Unit2>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
