--- a/FreeElectro.lpi
+++ b/FreeElectro.lpi
@@ -12,7 +12,13 @@
       <Icon Value="0"/>
     </General>
     <VersionInfo>
-      <StringTable ProductVersion=""/>
+      <UseVersionInfo Value="True"/>
+      <AutoIncrementBuild Value="True"/>
+      <BuildNr Value="4"/>
+      <Language Value="0419"/>
+      <CharSet Value="04E3"/>
+      <Attributes pvaDebug="True" pvaSpecialBuild="True"/>
+      <StringTable CompanyName="Prospero soft ltd." FileDescription="Free store for Electrical data" LegalTrademarks="FreeElectro" ProductName="FreeElectro" ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
