--- a/FreeElectro.lpi
+++ b/FreeElectro.lpi
@@ -11,13 +11,13 @@
       <UseXPManifest Value="True"/>
       <Icon Value="0"/>
       <Resources Count="1">
-        <Resource_0 FileName="res\1_wire_Cu.txt" Type="HTML" ResourceName="WIRE_CU_1"/>
+        <Resource_0 FileName="res\wire_Cu_1.txt" Type="RCDATA" ResourceName="WIRE_CU_1"/>
       </Resources>
     </General>
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
-      <BuildNr Value="5"/>
+      <BuildNr Value="6"/>
       <Language Value="0419"/>
       <CharSet Value="04E3"/>
       <Attributes pvaDebug="True" pvaSpecialBuild="True"/>
@@ -70,18 +70,39 @@
       <OtherUnitFiles Value="pakWin"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
+    <Parsing>
+      <SyntaxOptions>
+        <IncludeAssertionCode Value="True"/>
+      </SyntaxOptions>
+    </Parsing>
     <CodeGeneration>
+      <SmartLinkUnit Value="True"/>
+      <RelocatableUnit Value="True"/>
+      <Checks>
+        <IOChecks Value="True"/>
+        <RangeChecks Value="True"/>
+        <OverflowChecks Value="True"/>
+        <StackChecks Value="True"/>
+      </Checks>
+      <VerifyObjMethodCallValidity Value="True"/>
       <TargetProcessor Value="pentium4"/>
       <TargetCPU Value="i386"/>
       <TargetOS Value="win32"/>
     </CodeGeneration>
     <Linking>
+      <LinkSmart Value="True"/>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
         </Win32>
       </Options>
     </Linking>
+    <Other>
+      <Verbosity>
+        <ShowExecInfo Value="True"/>
+        <ShowHintsForUnusedUnitsInMainSrc Value="True"/>
+      </Verbosity>
+    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
