--- a/FreeElectro.lpi
+++ b/FreeElectro.lpi
@@ -70,6 +70,7 @@
         <Filename Value="pakWin\modWinSize.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="winSize"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit2>
     </Units>
